--- a/style.css
+++ b/style.css
@@ -13,8 +13,58 @@ body{
 
 .header {
     background-color: rgb(255, 255, 255);
+    box-shadow: 0px 5px 10px #646464;
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
+.header-top {
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.header-top-left{
+    height: 40px;
+    padding-left: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search {
+    height: 40px;
+}
+
+#searchbar{
+    border-radius: 50px;
+    height: 40px;
+    width: 600px;
+    padding-left: 10px;
+}
+
+.header-top-right{
+    height: 20px;
+    padding-right: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.notifs {
+    height: 20px;
+}
+
+.user-icon {
+    height: 40px;
+    width: 40px;
+}
+
+.header-bottom{
+    display: flex;
+}
 .sidebar {
     background-color: #083344;
     grid-row: 1 / 3;
