--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 
 .header {
     background-color: rgb(255, 255, 255);
-    box-shadow: 0px 5px 10px #646464;
+    box-shadow: 0px 5px 50px #646464;
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
@@ -118,17 +118,29 @@ body{
     gap: 10px
 }
 
+
+.nav-header{
+    display: flex;
+    flex-direction: row;
+    padding-left: 30px;
+    padding-top: 10px;
+    align-items: center;
+}
 .header-logo {
     height: 100px;
-    fill: white;
+    color: white;
+}
+
+.nav-heading{
+    font-size: 40px;
+    color: #ecfeff
 }
 
 .nav-items {
     list-style: none;
     font-size: 40px;
-    color: white;
+    color: #ecfeff
 }
-
 .content {
     background-color: #ecfeff;
 }
