--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 .header-bottom-left{
@@ -142,5 +142,129 @@ body{
     color: #ecfeff
 }
 .content {
-    background-color: #ecfeff;
+    background-color: #bbbbbb;
+    display: grid;
+    grid-template: 1fr 1fr / 2fr 1fr;
 }
+
+.projects{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
+    padding-left: 20px;
+}
+
+.projects-container{
+    flex: 1 1 0;
+    display: grid;
+    grid-template: 1fr 1fr 1fr / 1fr 1fr;
+    gap: 10px;
+}
+
+.project-grid-element{
+    padding: 10px;
+    height: 180px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: white;
+    border-radius: 10px;
+    border-left: 10px solid orange;
+    /*font-size: 20px;*/
+}
+
+.project-icons{
+    align-self: end;
+    height: 30px;
+    padding: 10px;
+    padding-bottom: 20px;
+}
+.announcements{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.anouncements-container{
+    background-color: white;
+    flex: 1 1 0;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.announcement-heading{
+    text-align: start;
+    font-size: 20px;
+    font-weight: bold;
+    width: 90%;
+}
+
+.announcement-text{
+    width: 90%;
+    font-size: 12px;
+}
+
+.announcement-bar{
+    border-bottom: 2px solid black;
+    width: 80%;
+}
+
+.trending{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+}
+
+.trending-header{
+    font-size: 20px;
+    font-weight: bold;
+}
+.trending-container{
+    background-color: white;
+    flex: 1 1 0;
+    margin-bottom: 15px;
+    margin-right: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.trending-profile{
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+}
+
+.trending-icon{
+    height: 70px;
+}
+
+.trending-account-details{
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+.trending-acct-tag , .trending-acct-name{
+    font-size: 20px;
+}
+
